Mobile Responsive Fixes.

--- a/pages/BPs/BP08.html
+++ b/pages/BPs/BP08.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>RO Blog: Sanskrit Yoga Dictionary</title>
     <!-- Stylesheet Reference(s) -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../../css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Import Fonts from Google-->
@@ -20,14 +20,14 @@
 <body class="homepage">
 <!-- Navigation Bar -->
 <nav class="navbar fixed-top navbar-expand-md" style="background-color: #f4f4f4;">
-    <a class="navbar-brand" href="/index.html"><img class="logo" src="/images/roLogo.png" alt="Rambling Odyssey Yoga"></a>
+    <a class="navbar-brand" href="../../index.html"><img class="logo" src="../../images/roLogo.png" alt="Rambling Odyssey Yoga"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-            <a class="nav-link" href="/index.html">Home</span></a>
-            <a class="nav-link active" href="/pages/blog.html">Blog <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="../../index.html">Home</span></a>
+            <a class="nav-link active" href="../../pages/blog.html">Blog <span class="sr-only">(current)</span></a>
         </div>
     </div>
 </nav>
@@ -40,7 +40,7 @@
             <h3>July 22, 2020</h3>
             <div class="blogPosts">
                 <div class="imageSM">
-                    <img src="/images/BP08.jpg" alt="Yoga Matt Image">
+                    <img src="../../images/BP08.jpg" alt="Yoga Matt Image">
                 </div>
                 <div class="abtWrapper">
                     <a class="abtcred-link" target="_BLANK" href="https://www.pexels.com/photo/balance-blur-boulder-close-up-355863/">Photo</a> by 
@@ -92,7 +92,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nulla orci, tristique id mauris id, finibus finibus nisi. Suspendisse potenti. Nam tincidunt ullamcorper facilisis. Nam rhoncus vehicula urna ac hendrerit. Vivamus interdum, arcu a vestibulum vulputate, metus dui finibus libero, ac semper diam diam vitae felis. Duis vitae porttitor augue. Mauris turpis sapien, pretium cursus iaculis porta, pharetra nec dolor.</p>
             </div>
             <div class="blogPostBtnWrapper">
-                <a href="/pages/blog.html" target="_BLANK" class="btn blogPostBtn">Return to Blog</a>
+                <a href="../../pages/blog.html" target="_BLANK" class="btn blogPostBtn">Return to Blog</a>
             </div>
             <div>
                 <p class="disclaimer">Please note, The Rambling Odyssey Yoga Studio is a made-up studio; it got its start in 2020 when website creator Alli Adolphson needed a topic to build a website for in her ICT-4505 Website Design and Management Class. The studio, owner, instructors, class schedules and pricing, location, and other relevant details about Rambling Odyssey Yoga, etc. have been made up and are not intended to represent real people, places, or class offerings. </p>
@@ -101,7 +101,7 @@
         <div class="postSidebar">
             <h1>About Amanda</h1>
             <div class="cardBlog">
-                <img src="/images/pexels-natalie-3759660.jpg" class="card-img" alt="Amanda">
+                <img src="../../images/pexels-natalie-3759660.jpg" class="card-img" alt="Amanda">
                 <div class="abtWrapper">
                     <a class="abtcred-link" target="_BLANK" href="https://www.pexels.com/photo/woman-doing-yoga-exercise-at-the-sea-shore-3759660/">Photo</a> by 
                     <a class="abtcred-link" target="_BLANK" href="https://www.pexels.com/@natalie-320378">Natalie</a> from 
@@ -109,7 +109,7 @@
                 </div>
                 <div class="card-body">
                     <h2>Hi! I'm Amanda!</h2>
-                    <p class="card-text">Owner, founder, and instructor at Rambling Odyssey Yoga. My mission is to build optimism, creativity, and community through the articles shared on this blog. <a class="blog-link" href="/pages/about.html">Learn More!</a></p>
+                    <p class="card-text">Owner, founder, and instructor at Rambling Odyssey Yoga. My mission is to build optimism, creativity, and community through the articles shared on this blog. <a class="blog-link" href="../../pages/about.html">Learn More!</a></p>
                 </div>
             </div>
             <div class="socialMedia">
@@ -128,9 +128,9 @@
 <!-- Footer -->
 <footer>
     <p class="link">
-        <a href="/pages/about.html">About</a><br>
-        <a href="/pages/contact.html">Contact</a><br>
-        <a href="/pages/blog.html">Blog</a>
+        <a href="../../pages/about.html">About</a><br>
+        <a href="../../pages/contact.html">Contact</a><br>
+        <a href="../../pages/blog.html">Blog</a>
     </p>
     <p>1600 Pennsylvania Ave NW<br>
     Washington DC, 20500<br>
