--- a/pages/blog.html
+++ b/pages/blog.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Rambling Odyssey Blog</title>
     <!-- Stylesheet Reference(s) -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!--Import Fonts from Google-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;900&family=Sacramento&display=swap" rel="stylesheet">
@@ -19,18 +19,18 @@
 <body class="homepage">
 <!-- Navigation Bar -->
 <nav class="navbar fixed-top navbar-expand-md" style="background-color: #f4f4f4;">
-    <a class="navbar-brand" href="/index.html"><img class="logo" src="/images/roLogo.png" alt="Rambling Odyssey Yoga"></a>
+    <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/roLogo.png" alt="Rambling Odyssey Yoga"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-            <a class="nav-link" href="/index.html">Home</a>
-            <a class="nav-link" href="/pages/about.html">About</a>
-            <a class="nav-link" href="/pages/calendar.html">Calendar</a>
-            <a class="nav-link" href="/pages/pricing.html">Pricing</a>
-            <a class="nav-link" href="/pages/contact.html">Contact</a>
-            <a class="nav-link active" href="/pages/blog.html">Blog <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="../index.html">Home</a>
+            <a class="nav-link" href="../pages/about.html">About</a>
+            <a class="nav-link" href="../pages/calendar.html">Calendar</a>
+            <a class="nav-link" href="../pages/pricing.html">Pricing</a>
+            <a class="nav-link" href="../pages/contact.html">Contact</a>
+            <a class="nav-link active" href="../pages/blog.html">Blog <span class="sr-only">(current)</span></a>
         </div>
     </div>
 </nav>
@@ -46,8 +46,8 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/BP05.jpg" class="d-block" alt="...">
-                    <a href="/pages/BPs/BP05.html">
+                    <img src="../images/BP05.jpg" class="d-block" alt="...">
+                    <a href="../pages/BPs/BP05.html">
                         <div class="carousel-caption d-sm-block">
                             <h1>Find the Right Yoga Style for You</h1>
                             <p>There are eight types of yoga, but which is right for you? Read more and decide for yourself!</p>
@@ -55,8 +55,8 @@
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/BP04c.jpg" class="d-block" alt="...">
-                    <a href="/pages/BPs/BP04.html">
+                    <img src="../images/BP04c.jpg" class="d-block" alt="...">
+                    <a href="../pages/BPs/BP04.html">
                         <div class="carousel-caption d-sm-block">
                             <h1>6 Stretches to Do Before Bed</h1>
                             <p>Practice these six postures to relieve the stress of your day and transition your mind for restful, peaceful sleep.</p>
@@ -64,8 +64,8 @@
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/BP13.jpg" class="d-block" alt="...">
-                    <a href="/pages/BPs/BP13.html">
+                    <img src="../images/BP13.jpg" class="d-block" alt="...">
+                    <a href="../pages/BPs/BP13.html">
                         <div class="carousel-caption d-sm-block">
                             <h1>Common Yoga Phrases New Students Should Know</h1>
                             <p>Before you step into the studio, here are few words and phrases you should expect to hear!</p>
@@ -97,106 +97,106 @@
         </div>
         <div class="bpGalleryGrid">
             <div class="bpGalleryTile all lifestyle">
-                <a href="/pages/BPs/BP15.html" target="_BLANK">
-                    <img src="/images/BP15.jpg" alt="Blog Post 15 Image">
+                <a href="../pages/BPs/BP15.html" target="_BLANK">
+                    <img src="../images/BP15.jpg" alt="Blog Post 15 Image">
                     <h1>The Benefits of Mindfulness</h1>
                     <p>There are physical and mental benefits associated with the mindful practice of yoga. Discover more here.</p>
                 </a>
             </div>
             <div class="bpGalleryTile all beginner lifestyle practice">
-                <a href="/pages/BPs/BP14.html" target="_BLANK">
-                    <img src="/images/BP14.jpg" alt="Blog Post 14 Image">
+                <a href="../pages/BPs/BP14.html" target="_BLANK">
+                    <img src="../images/BP14.jpg" alt="Blog Post 14 Image">
                     <h1>10 Things That Happen When You Start Doing Yoga</h1>
                     <p>Want to know what benefits and changes you’ll experience on your yoga journey? Start reading here.</p>
                 </a>
             </div>
             <div class="bpGalleryTile all beginner history practice">
-                <a href="/pages/BPs/BP13.html" target="_BLANK">
-                    <img src="/images/BP13.jpg" alt="Blog Post 13 Image">
+                <a href="../pages/BPs/BP13.html" target="_BLANK">
+                    <img src="../images/BP13.jpg" alt="Blog Post 13 Image">
                     <h1>Common Yoga Phrases You Should Know</h1>
                     <p>Before you step into the studio, here are few words and phrases you should expect to hear!</p>
                 </a>
             </div>
             <div class="bpGalleryTile all beginner practice">
-                <a href="/pages/BPs/BP12.html" target="_BLANK">
-                    <img src="/images/BP12.jpg" alt="Blog Post 12 Image">
+                <a href="../pages/BPs/BP12.html" target="_BLANK">
+                    <img src="../images/BP12.jpg" alt="Blog Post 12 Image">
                     <h1>What Are Intentions and How Can They Help Me?</h1>
                     <p>Find out the why and, more importantly, the how of expanding your yoga practice with intention.</p>
                 </a>
             </div>
             <div class="bpGalleryTile all lifestyle practice">
-                <a href="/pages/BPs/BP11.html" target="_BLANK">
-                    <img src="/images/BP11.jpg" alt="Blog Post 11 Image">
+                <a href="../pages/BPs/BP11.html" target="_BLANK">
+                    <img src="../images/BP11.jpg" alt="Blog Post 11 Image">
                     <h1>How to Create an At Home Yoga Space</h1>
                     <p>Curate a beautiful, peaceful space for your at home yoga practice.</p>
                 </a>
             </div>
             <div class="bpGalleryTile all history">
-                <a href="/pages/BPs/BP10.html" target="_BLANK">
-                    <img src="/images/BP10.jpg" alt="Blog Post 10 Image">
+                <a href="../pages/BPs/BP10.html" target="_BLANK">
+                    <img src="../images/BP10.jpg" alt="Blog Post 10 Image">
                     <h1>20 Yoga Sutras Translated & Explained</h1>
                     <p>The history of yoga is vast and rich with ancient texts; here are 20 of our favorites to get you started.</p>
                 </a>
             </div>
             <div class="bpGalleryTile all lifestyle history practice">
-                <a href="/pages/BPs/BP09.html" target="_BLANK">
-                    <img src="/images/BP09.jpg" alt="Blog Post 09 Image">
+                <a href="../pages/BPs/BP09.html" target="_BLANK">
+                    <img src="../images/BP09.jpg" alt="Blog Post 09 Image">
                     <h1>5 Yoga Books for Your Commute</h1>
                     <p>Here are the 5 best yoga books we recommend adding to your bookshelf in 2020.</p>
                 </a>
             </div>
             <div class="bpGalleryTile all history practice">
-                <a href="/pages/BPs/BP08.html" target="_BLANK">
-                    <img src="/images/BP08.jpg" alt="Blog Post 08 Image">
+                <a href="../pages/BPs/BP08.html" target="_BLANK">
+                    <img src="../images/BP08.jpg" alt="Blog Post 08 Image">
                     <h1>Sanskrit Yoga Dictionary</h1>
                     <p>A guide to essential Sanskrit yoga terms.</p>
                 </a>
             </div>
             <div class="bpGalleryTile all beginner practice">
-                <a href="/pages/BPs/BP07.html" target="_BLANK">
-                    <img src="/images/BP07.jpg" alt="Blog Post 07 Image">
+                <a href="../pages/BPs/BP07.html" target="_BLANK">
+                    <img src="../images/BP07.jpg" alt="Blog Post 07 Image">
                     <h1>The Yogi Code</h1>
                     <p>A beginner’s guide to the philosophy of yoga.</p>
                 </a>
             </div>
             <div class="bpGalleryTile all beginner lifestyle practice">
-                <a href="/pages/BPs/BP06.html" target="_BLANK">
-                    <img src="/images/BP06.jpg" alt="Blog Post 06 Image">
+                <a href="../pages/BPs/BP06.html" target="_BLANK">
+                    <img src="../images/BP06.jpg" alt="Blog Post 06 Image">
                     <h1>5 Ways to Make Yoga A Daily Habit</h1>
                     <p>These 5 strategies actually work to help bring yoga into your daily life.</p>
                 </a>
             </div>
             <div class="bpGalleryTile all beginner">
-                <a href="/pages/BPs/BP05.html" target="_BLANK">
-                    <img src="/images/BP05.jpg" alt="Blog Post 05 Image">
+                <a href="../pages/BPs/BP05.html" target="_BLANK">
+                    <img src="../images/BP05.jpg" alt="Blog Post 05 Image">
                     <h1>Find the Right Style For You</h1>
                     <p>There are eight types of yoga, but which is right for you? Read more and decide for yourself!</p>
                 </a>
             </div>
             <div class="bpGalleryTile all poses practice">
-                <a href="/pages/BPs/BP04.html" target="_BLANK">
-                    <img src="/images/BP04.jpg" alt="Blog Post 04 Image">
+                <a href="../pages/BPs/BP04.html" target="_BLANK">
+                    <img src="../images/BP04.jpg" alt="Blog Post 04 Image">
                     <h1>6 Stretches To Do Before Bed</h1>
                     <p>Practice these six postures to relieve the stress of your day and transition your mind for restful, peaceful sleep.</p>
                 </a>
             </div>
             <div class="bpGalleryTile all poses practice">
-                <a href="/pages/BPs/BP03.html" target="_BLANK">
-                    <img src="/images/BP03.jpg" alt="Blog Post 03 Image">
+                <a href="../pages/BPs/BP03.html" target="_BLANK">
+                    <img src="../images/BP03.jpg" alt="Blog Post 03 Image">
                     <h1>10 Yoga Poses for Correcting Bad Posture</h1>
                     <p>Sitting for too long every day? Try these 10 easy poses to correct pain and strain associated with sitting at your desk.</p>
                 </a>
             </div>
             <div class="bpGalleryTile all lifestyle practice">
-                <a href="/pages/BPs/BP02.html" target="_BLANK">
-                    <img src="/images/BP02.jpg" alt="Blog Post 02 Image">
+                <a href="../pages/BPs/BP02.html" target="_BLANK">
+                    <img src="../images/BP02.jpg" alt="Blog Post 02 Image">
                     <h1>DIY Yoga Mat Cleaner</h1>
                     <p>Explore our recipe and instructions for how to make your own yoga mat spray at home.</p>
                 </a>
             </div>
             <div class="bpGalleryTile all poses practice">
-                <a href="/pages/BPs/BP01.html" target="_BLANK">
-                    <img src="/images/BP01.jpg" alt="Blog Post 01 Image">
+                <a href="../pages/BPs/BP01.html" target="_BLANK">
+                    <img src="../images/BP01.jpg" alt="Blog Post 01 Image">
                     <h1>12 Minute Morning Yoga Routine</h1>
                     <p>Discover a quick, easy morning yoga routine that can be done in as few as 12 minutes.</p>
                 </a>
@@ -210,9 +210,9 @@
 <!-- Footer -->
 <footer>
     <p class="link">
-        <a href="/pages/about.html">About</a><br>
-        <a href="/pages/contact.html">Contact</a><br>
-        <a href="/pages/blog.html">Blog</a>
+        <a href="../pages/about.html">About</a><br>
+        <a href="../pages/contact.html">Contact</a><br>
+        <a href="../pages/blog.html">Blog</a>
     </p>
     <p>1600 Pennsylvania Ave NW<br>
     Washington DC, 20500<br>
