--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Contact Rambling Odyssey</title>
     <!-- Stylesheet Reference(s) -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Import Fonts from Google-->
@@ -20,18 +20,18 @@
 <body class="homepage">
 <!-- Navigation Bar -->
 <nav class="navbar fixed-top navbar-expand-md" style="background-color: #f4f4f4;">
-    <a class="navbar-brand" href="/index.html"><img class="logo" src="/images/roLogo.png" alt="Rambling Odyssey Yoga"></a>
+    <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/roLogo.png" alt="Rambling Odyssey Yoga"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-            <a class="nav-link" href="/index.html">Home</a>
-            <a class="nav-link" href="/pages/about.html">About</a>
-            <a class="nav-link" href="/pages/calendar.html">Calendar</a>
-            <a class="nav-link" href="/pages/pricing.html">Pricing</a>
-            <a class="nav-link active" href="/pages/contact.html">Contact <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="/pages/blog.html">Blog</a>
+            <a class="nav-link" href="../index.html">Home</a>
+            <a class="nav-link" href="../pages/about.html">About</a>
+            <a class="nav-link" href="../pages/calendar.html">Calendar</a>
+            <a class="nav-link" href="../pages/pricing.html">Pricing</a>
+            <a class="nav-link active" href="../pages/contact.html">Contact <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="../pages/blog.html">Blog</a>
         </div>
     </div>
 </nav>
@@ -102,9 +102,9 @@
 <!-- Footer -->
 <footer>
     <p class="link">
-        <a href="/pages/about.html">About</a><br>
-        <a href="/pages/contact.html">Contact</a><br>
-        <a href="/pages/blog.html">Blog</a>
+        <a href="../pages/about.html">About</a><br>
+        <a href="../pages/contact.html">Contact</a><br>
+        <a href="../pages/blog.html">Blog</a>
     </p>
     <p>1600 Pennsylvania Ave NW<br>
     Washington DC, 20500<br>
