--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>About Rambling Odyssey</title>
     <!-- Stylesheet Reference(s) -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!--Import Fonts from Google-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;900&family=Sacramento&display=swap" rel="stylesheet">
@@ -19,18 +19,18 @@
 <body class="homepage">
 <!-- Navigation Bar -->
 <nav class="navbar fixed-top navbar-expand-md" style="background-color: #f4f4f4;">
-    <a class="navbar-brand" href="/index.html"><img class="logo" src="/images/roLogo.png" alt="Rambling Odyssey Yoga"></a>
+    <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/roLogo.png" alt="Rambling Odyssey Yoga"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-            <a class="nav-link" href="/index.html">Home</a>
-            <a class="nav-link active" href="/pages/about.html">About <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="/pages/calendar.html">Calendar</a>
-            <a class="nav-link" href="/pages/pricing.html">Pricing</a>
-            <a class="nav-link" href="/pages/contact.html">Contact</a>
-            <a class="nav-link" href="/pages/blog.html">Blog</a>
+            <a class="nav-link" href="../index.html">Home</a>
+            <a class="nav-link active" href="../pages/about.html">About <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="../pages/calendar.html">Calendar</a>
+            <a class="nav-link" href="../pages/pricing.html">Pricing</a>
+            <a class="nav-link" href="../pages/contact.html">Contact</a>
+            <a class="nav-link" href="../pages/blog.html">Blog</a>
         </div>
     </div>
 </nav>
@@ -48,7 +48,7 @@
             <div class="abtCard">
                 <div class="aboutPhilosophy">
                     <h1 class="cardTitle">Our Philosophy</h1>
-                    <p>Rambling Odyssey Yoga offers classes for new and experienced yogis alike; the hope is each student will find a way to connect with one another in an open, creative environment meant to broaden your yoga practice and deepen your personal experience. We are here to push ourselves mentally and physical, to encourage each other in our growth, and to find peace in the chaos of our daily lives. Our instructors are invested in helping their students discover their own limits and push past them. There’s a class for everyone at Rambling Odyssey Yoga and we can’t wait for you to join us. <a class="abtcred-link" href="/pages/pricing.html">Learn how!</a></p>
+                    <p>Rambling Odyssey Yoga offers classes for new and experienced yogis alike; the hope is each student will find a way to connect with one another in an open, creative environment meant to broaden your yoga practice and deepen your personal experience. We are here to push ourselves mentally and physical, to encourage each other in our growth, and to find peace in the chaos of our daily lives. Our instructors are invested in helping their students discover their own limits and push past them. There’s a class for everyone at Rambling Odyssey Yoga and we can’t wait for you to join us. <a class="abtcred-link" href="../pages/pricing.html">Learn how!</a></p>
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
         <h1 class="cardTitle">Our Team</h1>
         <div class="cardContainer">
             <div class="card">
-                <img src="/images/pexels-natalie-3759660.jpg" class="card-img-left" alt="Amanda">
+                <img src="../images/pexels-natalie-3759660.jpg" class="card-img-left" alt="Amanda">
                 <div class="card-body">
                     <h4 class="card-title">Amanda Awesome</h4>
                     <p class="card-text">After eleven years of teaching yoga in other studios, Amanda decided to open Rambling Odyssey Yoga to share her unique teaching philosophy, based on core strength, dynamic movement, and balance.</p>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
             <div class="card">
-                <img src="/images/pexels-spencer-selover-775417.jpg" class="card-img-center" alt="Simon">
+                <img src="../images/pexels-spencer-selover-775417.jpg" class="card-img-center" alt="Simon">
                 <div class="card-body">
                     <h4 class="card-title">Simon Stupendous</h4>
                     <p class="card-text">Stumbling upon yoga with the hope of calming his anxious mind and restoring health to his physical body, Simon fell in love with the practice and has been happily teaching yoga for the past nine years.</p>
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/images/pexels-cottonbro-4056535.jpg" class="card-img-right" alt="Laurie">
+                <img src="../images/pexels-cottonbro-4056535.jpg" class="card-img-right" alt="Laurie">
                 <div class="card-body">
                     <h4 class="card-title">Laurie Likeable</h4>
                     <p class="card-text">New to yoga instruction, but not to the practice, Laurie completed her RYT200 at CorePower Yoga in 2019 and we are excited to welcome her to the Rambling Odyssey Yoga studio.</p>
@@ -105,9 +105,9 @@
 <!-- Footer -->
 <footer>
     <p class="link">
-        <a href="/pages/about.html">About</a><br>
-        <a href="/pages/contact.html">Contact</a><br>
-        <a href="/pages/blog.html">Blog</a>
+        <a href="../pages/about.html">About</a><br>
+        <a href="../pages/contact.html">Contact</a><br>
+        <a href="../pages/blog.html">Blog</a>
     </p>
     <p>1600 Pennsylvania Ave NW<br>
     Washington DC, 20500<br>
