--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 <body class="homepage">
 <!-- Navigation Bar -->
 <nav class="navbar fixed-top navbar-expand-md" style="background-color: #f4f4f4;">
-    <a class="navbar-brand" href="/index.html"><img class="logo" src="images/roLogo.png" alt="Rambling Odyssey Yoga"></a>
+    <a class="navbar-brand" href="index.html"><img class="logo" src="images/roLogo.png" alt="Rambling Odyssey Yoga"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-            <a class="nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="/pages/about.html">About</a>
-            <a class="nav-link" href="/pages/calendar.html">Calendar</a>
-            <a class="nav-link" href="/pages/pricing.html">Pricing</a>
-            <a class="nav-link" href="/pages/contact.html">Contact</a>
-            <a class="nav-link" href="/pages/blog.html">Blog</a>
+            <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="pages/about.html">About</a>
+            <a class="nav-link" href="pages/calendar.html">Calendar</a>
+            <a class="nav-link" href="pages/pricing.html">Pricing</a>
+            <a class="nav-link" href="pages/contact.html">Contact</a>
+            <a class="nav-link" href="pages/blog.html">Blog</a>
         </div>
     </div>
 </nav>
@@ -39,7 +39,7 @@
 <article class="homepage">
     <div class="videoBG">
         <video id="homepageVideo" autoplay muted loop>
-            <source src="/images/yoga.mp4" type="video/mp4">
+            <source src="images/yoga.mp4" type="video/mp4">
         </video>
     </div>
     <div class="welcomeMsg">
@@ -58,9 +58,9 @@
 <!-- Footer -->
 <footer>
     <p class="link">
-        <a href="/pages/about.html">About</a><br>
-        <a href="/pages/contact.html">Contact</a><br>
-        <a href="/pages/blog.html">Blog</a>
+        <a href="pages/about.html">About</a><br>
+        <a href="pages/contact.html">Contact</a><br>
+        <a href="pages/blog.html">Blog</a>
     </p>
     <p>1600 Pennsylvania Ave NW<br>
     Washington DC, 20500<br>
