Cleaned up for HTML validator.

--- a/pages/BPs/BP02.html
+++ b/pages/BPs/BP02.html
@@ -26,7 +26,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-            <a class="nav-link" href="../../index.html">Home</span></a>
+            <a class="nav-link" href="../../index.html">Home</a>
             <a class="nav-link active" href="../../pages/blog.html">Blog <span class="sr-only">(current)</span></a>
         </div>
     </div>
@@ -50,15 +50,15 @@
                 <h4>Explore our recipe and instructions for how to make your own yoga mat spray at home.</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at nulla quam. Ut nec nulla id leo pulvinar scelerisque. Curabitur at tristique massa. Proin eget magna eros. Duis cursus velit odio, in viverra felis convallis a. Nunc est quam, fringilla non ante a, ultrices eleifend nulla. Phasellus ornare ipsum non justo pretium pretium. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper sapien id dui interdum, eu laoreet mauris fermentum.</p>
                 <p>Vivamus ligula sapien, pharetra vitae lorem at, placerat luctus ex. Pellentesque placerat varius ultricies. In volutpat diam varius placerat ornare. Maecenas at pretium dolor. Integer egestas quam eros, nec ultrices ipsum tempus eget. Mauris risus lacus, cursus id lectus a, placerat egestas enim. Etiam nulla neque, finibus nec viverra sed, laoreet sodales mi. Ut et volutpat dolor. Vestibulum tellus arcu, placerat et est eu, accumsan vestibulum turpis. Vestibulum gravida, turpis vitae cursus ultricies, sapien ex dapibus nibh, ut facilisis elit nisi id neque. Maecenas accumsan fringilla enim, a porta massa imperdiet vitae.</p>
+                <h3>Ingredients</h3>
                 <ul>
-                    <h3>Ingredients</h3>
                     <li>Fermentum</li>
                     <li>Augue Sagittis, Dignissim Massa Et, Accumsan Nulla</li>
                     <li>Maecenas</li>
                     <li>Proin A Erat Ornare</li>
                 </ul>
+                <h3>Instructions</h3>
                 <ul>
-                    <h3>Instructions</h3>
                     <li>Donec tristique est ac nulla ultrices placerat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut magna ut mauris venenatis malesuada vel vel sapien.</li>
                     <li>Suspendisse vestibulum sem at mauris dictum, dapibus placerat neque tristique. Maecenas in libero nec lacus luctus maximus.</li>
                     <li>Nullam a tortor vitae sapien faucibus facilisis et dignissim eros. Duis ut quam nec lacus dictum pulvinar. Vivamus sagittis mi ut risus ultrices, ut posuere metus rutrum.</li>
