--- a/pages/BPs/BP06.html
+++ b/pages/BPs/BP06.html
@@ -26,7 +26,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-            <a class="nav-link" href="../../index.html">Home</span></a>
+            <a class="nav-link" href="../../index.html">Home</a>
             <a class="nav-link active" href="../../pages/blog.html">Blog <span class="sr-only">(current)</span></a>
         </div>
     </div>
@@ -50,8 +50,8 @@
                 <h4>These 5 strategies actually work to help bring yoga into your daily life.</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vestibulum purus lectus, euismod volutpat odio semper ac. Nulla id sapien fermentum, eleifend orci sed, semper risus. Duis quis lorem malesuada, vehicula enim vitae, scelerisque risus. Morbi risus arcu, ullamcorper ac ipsum quis, rutrum faucibus augue. Cras ut cursus mi. Nam sed turpis pulvinar, feugiat nunc id, laoreet sem. Integer convallis risus quis ultrices vehicula.</p>
                 <p>Proin vitae elit eget nisl congue blandit a vel eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sollicitudin tellus at nibh condimentum tempus. Suspendisse nec massa in lacus lobortis suscipit. Nunc et enim eget odio dignissim aliquet. Proin mollis metus vitae lectus luctus, ut viverra neque elementum. In non neque ex. Suspendisse tristique erat eu ipsum vulputate sodales. Nulla a felis ullamcorper, accumsan libero sed, elementum ante. Ut lacinia tellus quis ex efficitur, eget aliquet lacus luctus. Morbi vehicula sit amet augue vel tristique.</p>
+                <h3>Make Yoga a Habit</h3>
                 <ul>
-                    <h3>Make Yoga a Habit</h3>
                     <li>Donec varius lorem ac elit ultrices, eget gravida quam ullamcorper. Vestibulum sollicitudin nibh at ipsum vestibulum congue. Nulla non tortor sit amet velit fringilla dapibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</li>
                     <li>Ut consequat ultrices vestibulum. Mauris odio ligula, molestie lobortis diam vel, fringilla elementum felis. Donec sit amet risus fermentum sapien sagittis rutrum ac ut arcu. Nunc cursus tempus pretium. Cras eu lectus dictum, tincidunt est id, faucibus massa.</li>
                     <li>Duis ac nisi luctus, gravida tellus sed, hendrerit ipsum. Donec ultrices libero et varius feugiat. Nunc vitae maximus justo. Cras non urna a neque laoreet tempor. Sed eget congue augue.</li>
