--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8d3725dab7.js" crossorigin="anonymous"></script>
     <!-- Video Playback at Half Speed -->
-    <script type="text/javascript">
-        var vid = document.querySelector("#videoBG");
+    <script>
+        var vid = document.querySelector(".videoBG");
         vid.playbackRate = 0.5;
     </script>
 </body>
