--- a/pages/BPs/BP01.html
+++ b/pages/BPs/BP01.html
@@ -26,7 +26,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-            <a class="nav-link" href="../../index.html">Home</span></a>
+            <a class="nav-link" href="../../index.html">Home</a>
             <a class="nav-link active" href="../../pages/blog.html">Blog <span class="sr-only">(current)</span></a>
         </div>
     </div>
