--- a/pages/BPs/BP04.html
+++ b/pages/BPs/BP04.html
@@ -26,7 +26,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-            <a class="nav-link" href="../../index.html">Home</span></a>
+            <a class="nav-link" href="../../index.html">Home</a>
             <a class="nav-link active" href="../../pages/blog.html">Blog <span class="sr-only">(current)</span></a>
         </div>
     </div>
@@ -66,8 +66,8 @@
                         </div>
                     </div>
                 </div>
+                <h3>6 Stretches for Better Sleep</h3>
                 <ul>
-                    <h3>6 Stretches for Better Sleep</h3>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
                     <li>Mauris lacinia sem vel turpis gravida, ut convallis nibh cursus.</li>
                     <li>Duis scelerisque elit ut rhoncus semper.</li>
@@ -78,7 +78,7 @@
                 </ul>
                 <div class="row">
                     <div class="col-md-12">
-                        <div id="mdb-lightbox-ui">
+                        <div class="mdb-lightbox-ui">
                             <div class="mdb-lightbox">
                                 <figure class="col-md-4">
                                     <img src="../../images/Poses/pexels-li-sun-2294360.jpg" class="img-fluid" alt="TITLE">
