--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -60,7 +60,7 @@
                     <div class="card-header calCard" id="Sunday">
                         <h2 class="mb-0">
                             <button class="btn btn-block text-center" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                <h7 class="calColTitle"><span id="dayOfWeek"></span> Classes</h1>
+                                <span class="calColTitle"><span id="dayOfWeek"></span> Classes</span>
                             </button>
                         </h2>
                     </div>
@@ -94,7 +94,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8d3725dab7.js" crossorigin="anonymous"></script>
-<script type="text/javascript">
+<script>
         // Define Schedule In JSON
             var schedule = {
                 "sunday":[
