--- a/pages/contact.html
+++ b/pages/contact.html
@@ -84,7 +84,7 @@
                 <h1>Our Location</h1>
                 <div class="smMap">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.1543664832784!2d-77.03878078456867!3d38.89758515453816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b78e00410e73%3A0xac8125363999a8f!2s1600%20Pennsylvania%20Avenue%20NW%2C%20Washington%2C%20DC%2020500!5e0!3m2!1sen!2sus!4v1597443568435!5m2!1sen!2sus" 
-                    width="375" height="255.5" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    width="375" height="255" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
                 <div class="mapIcon">
                     <a href="https://www.google.com/maps?ll=38.941388,-77.028009&z=10&t=m&hl=en&gl=US&mapclient=embed&q=1600+Pennsylvania+Avenue+NW+Washington,+DC+20500" target="_BLANK">
